--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -332,7 +332,10 @@ template {
     background-repeat: no-repeat;
     padding-bottom: 15px;
     padding-top: 15px;
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
+    justify-content: center;
     text-align: center !important; }
     .weather__current__temperature {
       font-size: 72px;
@@ -357,13 +360,15 @@ template {
     background: #FFFFFF;
     box-sizing: border-box;
     color: #04080C !important;
-    flex-grow: 1;
-    padding: 15px;
     width: 100%;
+    padding-bottom: 15px;
+    padding-top: 15px;
     border-top-left-radius: 45px;
     border-top-right-radius: 45px; }
     .weather__slider.-md {
       display: none; }
+    .weather__slider .slick-dots {
+      position: static; }
   .weather--day {
     background: #FDC6C6;
     background: linear-gradient(180deg, #FDC6C6 0%, #E6D3DF 60%);
@@ -378,7 +383,9 @@ template {
       background-image: url("/images/night-background.png"); }
 
 .weather-next-week {
-  text-align: center; }
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px; }
   .weather-next-week h1 {
     margin-top: 0; }
   .weather-next-week__days {
@@ -386,20 +393,23 @@ template {
     border-spacing: 0;
     width: 100%; }
   .weather-next-week__day__date {
-    color: #66625c; }
+    color: #66625c;
+    width: 50%; }
   .weather-next-week__day__icon {
-    width: 100%; }
+    width: 50%; }
     .weather-next-week__day__icon img {
       margin: 0 auto;
       max-height: 32px; }
-  .weather-next-week__day__min-temp {
+  .weather-next-week__day__max-temp {
     color: #66625c;
-    padding-left: 10px; }
+    padding: 0 10px; }
   .weather-next-week__day:nth-child(2n) {
     background: #F9F9F9; }
 
 .weather-details {
-  text-align: center; }
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px; }
   .weather-details h1 {
     margin-top: 0; }
   .weather-details__sunrise-sunset {
@@ -436,14 +446,16 @@ template {
     justify-content: center;
     flex-direction: column;
     flex-grow: 3; }
-  .weather__slider.-mobile {
-    display: none; }
-  .weather__slider.-md {
-    align-items: center;
-    display: flex;
-    flex-grow: 1;
-    height: auto;
-    justify-content: space-evenly; } }
+  .weather__slider {
+    padding-left: 15px;
+    padding-right: 15px; }
+    .weather__slider.-mobile {
+      display: none; }
+    .weather__slider.-md {
+      align-items: center;
+      display: flex;
+      height: auto;
+      justify-content: space-evenly; } }
 
 @media (min-width: 992px) {
   .weather {
